--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
             <a class="play-btn ui-link" data-size=4>
                 4x4 board
             </a>
-            <a class="play-btn ui-link" data-size=4>
+            <a class="play-btn ui-link" data-size=5>
                 5x5 board
+            </a>
+        </div>
+        <div class="game">
+            <div class="board">
+            </div>
+            <label>Enter a word</label>
+            <input type="text" id="word-box" autocomplete="off" style="width: 220px;">
+            <a id="submit" href="">
+                <span>Submit</span>
             </a>
         </div>
     </div>
