cleaned up files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="boggle.js"></script>
-    <script src="menu.js"></script>
+    <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="position: relative; min-height: 100%; top: 0px;">
