--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-    <script src="boggle.js"></script>
     <script src="game.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -24,7 +23,7 @@
             <label>Enter a word</label>
             <input type="text" id="word-box" autocomplete="off" style="width: 220px;">
             <a id="submit" href="">
-                <span>Submit</span>
+                submit
             </a>
         </div>
     </div>
