--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <head>
 
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="game.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="position: relative; min-height: 100%; top: 0px;">
-    <div class="game-table" class="ui-page ui-page-theme-a ui-page-active">
+    <div class="game-table">
         <div class="menu">
-            <a class="play-btn ui-link" data-size=4>
+            <a class="play-btn" data-size=4>
                 4x4 board
             </a>
-            <a class="play-btn ui-link" data-size=5>
+            <a class="play-btn" data-size=5>
                 5x5 board
             </a>
         </div>
         <div class="game">
             <div class="board">
+                <h3 id="time"></h3>
             </div>
-            <label>Enter a word</label>
-            <input type="text" id="word-box" autocomplete="off" style="width: 220px;">
-            <a id="submit" href="">
-                submit
-            </a>
+            <div id="submit-box">
+                <label>Enter a word</label>
+                <input type="text" id="word-box" autocomplete="off" style="width: 220px;">
+                <a id="submit" href="">
+                    submit
+                </a>
+            </div>
         </div>
     </div>
 </body>
