--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
             </a>
         </div>
         <div class="game">
+            <a id="found-words">
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+                test<br>
+            </a>
             <div class="board">
                 <h3 id="time"></h3>
             </div>
