word found scroll working now

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body style="position: relative; min-height: 100%; top: 0px;">
     <div class="game-table">
+
+
         <div class="menu">
             <a class="play-btn" data-size=4>
                 4x4 board
@@ -21,31 +23,13 @@
                 5x5 board
             </a>
         </div>
+
+
+
+
         <div class="game">
-            <a id="found-words">
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-                test<br>
-            </a>
+            <div id="found-words" style="">
+            </div>
             <div class="board">
                 <h3 id="time"></h3>
             </div>
@@ -57,5 +41,8 @@
                 </a>
             </div>
         </div>
+
+
+
     </div>
 </body>
